--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -1,1 +1,3 @@
-<h1 nz-typography >Welcome to Student Management</h1>
+<app-header title="Student Management app"></app-header>
+
+<h3 nz-typography class="home-text">Welcome!</h3>
