--- a/src/app/features/students/components/student-modal/student-modal.component.html
+++ b/src/app/features/students/components/student-modal/student-modal.component.html
@@ -1,8 +1,8 @@
-<nz-modal [nzTitle]="action==='add'? 'Add a student' : 'Edit a student'" [nzOkLoading]="isLoading"
+<nz-modal [nzTitle]="action==='add'? 'Add new student' : 'Edit selected student'" [nzOkLoading]="isLoading"
     [nzOkDisabled]="isLoading" [nzContent]="modalContent" [(nzVisible)]="isVisible" (nzOnCancel)="handleClose()"
     (nzOnOk)="handleSubmit()">
     <ng-template #modalContent>
-        <form nz-form [formGroup]="validateForm" class="login-form" (ngSubmit)="handleSubmit()">
+        <form nz-form [formGroup]="validateForm" (ngSubmit)="handleSubmit()">
             <nz-form-item>
                 <nz-form-control nzErrorTip="Please input firstName">
                     <nz-form-label nzRequired nzFor="firstName"> FirstName</nz-form-label>
@@ -21,10 +21,12 @@
             </nz-form-item>
             <nz-form-item>
                 <nz-form-control nzErrorTip="Please input group">
-                    <nz-form-label nzRequired nzFor="group"> Group</nz-form-label>
-                    <nz-input-group>
-                        <input type="number" nz-input formControlName="group" placeholder="Group" />
-                    </nz-input-group>
+                    <nz-form-label nzRequired nzFor="group">Group</nz-form-label>
+                    <nz-select formControlName="group">
+                        @for (group of groups(); track $index) {
+                        <nz-option [nzValue]="group.value" [nzLabel]="group.name"></nz-option>
+                        }
+                    </nz-select>
                 </nz-form-control>
             </nz-form-item>
         </form>
