--- a/src/app/features/students/students.component.html
+++ b/src/app/features/students/students.component.html
@@ -1,4 +1,4 @@
-<app-header title="Students"></app-header>
+<app-header title="Students List"></app-header>
 @if (loading()) {
 <p>Loading ...</p>
 } @else {
